test/Fail/Issue4390irrelevance.err
Issue4390irrelevance.agda:10.28-29: error: [UnequalTypes]
The function type
  .A → A
is not a subtype of
  A → A
because:
  one has irrelevant domain, while the other is relevant.
when checking that the expression f has type A → A
